CarRentalServiceUI/CarRentalService.UI/src/app/sign-up/sign-up.component.scss
.title{
	font-weight: bold;
	position: relative;
	top: 90px;
	color: white;
	font-size: 5vmin;
	left: 12vmin;
	width: 50vw;
	.subtitle{
		color: gray;
		
		font-size: 50%;
		
	}
	.link{
		font-size:50%;
		color: rgb(242, 170, 76, 1);
	}
	
}


.label{
	position: relative;
	left: 3vmin;
	color: rgb(242, 170, 76, 1);
	float: left;
	font-size: 2vmin;
}

.form{
	position: relative;
	left: 10vmin;
	top: 13vh;
	width: 80vmin;
	display: flex;
	flex-direction: column;
	
}

.inputfield{
	position: relative;
	left: 3vmin;
	float: left;
	background-color: rgb(24,24,24);
	padding: 0;
	outline: none;
	height: 4vh;
	border-width: 0;
	width: 70%;
	font-size: 120%;
	color: white;
}

.field{
	margin-bottom: 1vw;
	margin-left: 1vw;
	display: flex;
	flex-direction: column;
	background-color: rgb(24,24,24);
	border-style: solid;
	border-width: 1px;
	border-radius: 25px;
	height: 8vh;
	flex-basis:50%;
}	
.in-row{
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	flex-wrap: wrap;
}

.next-to{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.icon{
	font-size: 150%;
	position: relative;
	bottom: 10px;
	right: 15px;
	color: rgb(242, 170, 76, 1);
}

.checkbox-descryption{
	font-size: 2vh;
}

.container {
  display: block;
  position: relative;
  left: 1vw;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 2vh;
  color: white;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Hide the browser's default checkbox */
.hide {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
}

/* On mouse-over, add a grey background color */
.container:hover input ~ .checkmark {
  background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.container input:checked ~ .checkmark {
  background-color: rgb(242, 170, 76, 1);
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.container input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.container .checkmark:after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.button {
	color: white;
	background-color: rgb(242, 170, 76, 1);
	width: 40vmin;
	height: 6vh;
	border-style: solid;
	border-radius: 25px;
	border-width: 0;
	font-size: 150%;
}

.background-image {
    background-image: url('../../assets/sing-up-background.png');
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
}

